manifest/apps/infrastructure/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.jdnielss.my.id"
    - port:
        number: 443
        name: https-url-1
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "url-1-certs" # This should match the Certificate secretName
        httpsRedirect: true
      hosts:
        - "api.jdnielss.my.id"
    - port:
        number: 443
        name: https-url-2
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "url-2-certs" # This should match the Certificate secretName
        httpsRedirect: true
      hosts:
        - "www.jdnielss.my.id"
