manifest/apps/infrastructure/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golang-route-service
spec:
  hosts:
    - "api.jdnielss.my.id"
  gateways:
    - istio-gateway
  http:
    - name: "golang-route-service"
      route:
        - destination:
            host: go-api-service.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
spec:
  hosts:
    - "www.jdnielss.my.id"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: profile-kube.apps.svc.cluster.local
            port:
              number: 80
